[gd_scene load_steps=5 format=3 uid="uid://mwns2k8n0yf0"]

[ext_resource type="Texture2D" uid="uid://bj4wuds30s3st" path="res://assets/textures/ui/ScoreBox.png" id="1_dyrdu"]
[ext_resource type="Script" path="res://scripts/MyHud.gd" id="1_s7mae"]
[ext_resource type="Texture2D" uid="uid://bkyxfffe23s4h" path="res://assets/textures/ui/PauseBtn.png" id="2_ypjfu"]

[sub_resource type="LabelSettings" id="LabelSettings_5qu20"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s7mae")

[node name="TopBarBg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.588235)

[node name="TopBar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="ScoreBox" type="TextureRect" parent="TopBar"]
layout_mode = 0
offset_right = 179.0
offset_bottom = 49.0
texture = ExtResource("1_dyrdu")
expand_mode = 1

[node name="Label" type="Label" parent="TopBar"]
layout_mode = 0
offset_left = 7.0
offset_top = 9.0
offset_right = 173.0
offset_bottom = 51.0
text = "999999999
"
label_settings = SubResource("LabelSettings_5qu20")
horizontal_alignment = 2
vertical_alignment = 1

[node name="PauseButton" type="TextureButton" parent="TopBar"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -51.0
offset_bottom = 49.0
grow_horizontal = 0
texture_normal = ExtResource("2_ypjfu")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TopBar/PauseButton" to="." method="_on_pause_button_pressed"]
